@@ -57,6 +57,26 @@ def set_warning_method(method):
 # add that on top of the primitives, once we have all three written
 # - RBC 20050105
 
+
+def deprecation_string(a_callable, deprecation_version):
+    """Generate an automatic deprecation string for a_callable.
+
+    :param a_callable: The callable to substitute into deprecation_version.
+    :param deprecation_version: A deprecation format warning string. This should
+        have a single %s operator in it. a_callable will be turned into a nice
+        python symbol and then substituted into deprecation_version.
+    """
+    if getattr(a_callable, 'im_class', None) is None:
+        symbol = "%s.%s" % (a_callable.__module__,
+                            a_callable.__name__)
+    else:
+        symbol = "%s.%s.%s" % (a_callable.im_class.__module__,
+                               a_callable.im_class.__name__,
+                               a_callable.__name__
+                               )
+    return deprecation_version % symbol
+
+
 def deprecated_function(deprecation_version):
     """Decorate a function so that use of it will trigger a warning."""
 
@@ -65,10 +85,8 @@ def deprecated_function(deprecation_version):
         
         def decorated_function(*args, **kwargs):
             """This is the decorated function."""
-            symbol = "%s.%s" % (callable.__module__, 
-                                callable.__name__
-                                )
-            warn(deprecation_version % symbol, DeprecationWarning, stacklevel=2)
+            warn(deprecation_string(callable, deprecation_version),
+                DeprecationWarning, stacklevel=2)
             return callable(*args, **kwargs)
         _populate_decorated(callable, deprecation_version, "function",
                             decorated_function)
@@ -87,7 +105,7 @@ def deprecated_method(deprecation_version):
         
         def decorated_method(self, *args, **kwargs):
             """This is the decorated method."""
-            symbol = "%s.%s.%s" % (self.__class__.__module__, 
+            symbol = "%s.%s.%s" % (self.__class__.__module__,
                                    self.__class__.__name__,
                                    callable.__name__
                                    )
